testing/framework/resources/Advanced/Failing/mondrian/query6445.q
select customer.education as c0, product_class.product_family as c1, product_class.product_department as c2, product_class.product_category as c3, product_class.product_subcategory as c4, product.brand_name as c5, product.product_name as c6, customer.country as c7, customer.state_province as c8, customer.city as c9, customer.customer_id as c10, fullname as c11, fullname as c12, customer.gender as c13, customer.marital_status as c14, customer.education as c15, customer.yearly_income as c16, time_by_day.the_year as c17, time_by_day.quarter as c18 from customer as customer, sales_fact_1997 as sales_fact_1997, product as product, product_class as product_class, time_by_day as time_by_day where sales_fact_1997.customer_id = customer.customer_id and product.product_class_id = product_class.product_class_id and sales_fact_1997.product_id = product.product_id and sales_fact_1997.time_id = time_by_day.time_id and (time_by_day.quarter = 'Q1' and time_by_day.the_year = 1997) group by customer.education, product_class.product_family, product_class.product_department, product_class.product_category, product_class.product_subcategory, product.brand_name, product.product_name, customer.country, customer.state_province, customer.city, customer.customer_id, fullname, customer.gender, customer.marital_status, customer.yearly_income, time_by_day.the_year, time_by_day.quarter order by customer.education ASC NULLS LAST, product_class.product_family ASC NULLS LAST, product_class.product_department ASC NULLS LAST, product_class.product_category ASC NULLS LAST, product_class.product_subcategory ASC NULLS LAST, product.brand_name ASC NULLS LAST, product.product_name ASC NULLS LAST, customer.country ASC NULLS LAST, customer.state_province ASC NULLS LAST, customer.city ASC NULLS LAST, fullname ASC NULLS LAST, time_by_day.the_year ASC NULLS LAST, time_by_day.quarter ASC NULLS LAST;
